# cc.book-kit

./: .gitignore  README.md  TODO  blueprint  index.py  justfile  pyproject.toml  rcloneignore.txt
docs/: Codex.html  CodexPolicy.html  CodexService.html  Entry.html  JSONLexicon.html  KnowledgeRepository.html  Lexicon.html  ORJSONLexicon.html  PydanticLexicon.html  Relation.html  SQLIteKnowledegeRepository.html  UJSONLexicon.html  index.html  style.css
docs/usage/: OrjsonKnowledgeRepository.html
src/CapsuleCore_book/: __init__.py
src/CapsuleCore_book/capsule/: CodexService.py  JSONLexicon.py  KnowledgeRepository.py  Lexicon.py  ORJSONLexicon.py  OrjsonAdapter.py  (+6 more)
src/cc_book_kit/: __init__.py
tests/: conftest.py  test_CodexService.py  test_Entry.py  test_JSONLexicon.py  test_Lexicon.py  test_ORJSONLexicon.py  test_OrjsonAdapter.py  test_OrjsonKnowledgeRepository.py  test_PydanticLexicon.py  test_Relation.py  test_SQLiteAdapter.py  test_UJSONLexicon.py  test_create_entry.py  test_create_relation.py  test_delete_entry.py  test_disconnect_entries.py  test_edit_entry.py  test_groupBy_backRelations.py  test_groupBy_frontRelations.py  test_groupBy_relations.py  test_groupBy_tags.py  test_process_field_change.py  test_rules_category.py  test_rules_search_category.py  test_rules_search_tag.py  test_rules_tags.py  test_rules_titles.py  test_truncate_string.py  test_validate_string_capitalize.py  test_validate_string_content.py  test_validate_string_length.py  test_validate_string_lowercase.py  test_validate_string_whitespaces.py  test_validate_title_uniqueness.py
(+5 files in other folders)
