[project]
name = "CapsuleCore_book"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "orjson>=3.11.7",
    "peewee>=4.0.2",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
