[project]
name = "CapsuleCore_book"
version = "0.7.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "orjson>=3.11.7",
    "peewee>=4.0.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "ujson>=5.12.0",
]

[[tool.uv.index]]
name = "github"
url = "https://pypi.pkg.github.com/Rick-torrellas/CapsuleCore_book"
publish = true

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
